# Palladio-Build-Nightly

./: README.md
.github/: dependabot.yml
.github/workflows/: nightly.yml  update_build.yml
scripts/: dispatch_workflow.py
scripts/generate_nightly/: README.md  pyproject.toml
scripts/generate_nightly/generate_nightly/: __main__.py
scripts/generate_nightly/generate_nightly/template/: template.py
scripts/generate_nightly/generate_nightly/yaml/: github_action_loader.py
template/: custom_jobs_template.yml  force_rebuild_job_template.yaml  force_rebuild_template.yml  job_template.yml  nightly_template.yml
